--- a/overlays/development/app-prerequisites.yaml
+++ b/overlays/development/app-prerequisites.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-istio-minimal-profile
+  name: app-of-apps
   namespace: argocd
 spec:
   destination:
@@ -9,8 +9,8 @@ spec:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: profiles/minimal
-    repoURL: 'https://github.com/subhakar-ci-cd/istio-operator-kustomize.git'
+    path: overlays/development/app-prerequisites
+    repoURL: 'https://github.com/subhakar-ci-cd-tools/k8s-argocd-deployment'
     targetRevision: HEAD
   project: default
   syncPolicy:
