--- a/overlays/development/app-prerequisites.yaml
+++ b/overlays/development/app-prerequisites.yaml
@@ -12,6 +12,8 @@ spec:
     path: overlays/development/app-prerequisites
     repoURL: 'https://github.com/subhakarkotta/k8s-argocd-deployment'
     targetRevision: HEAD
+    directory:
+        recurse: true
   project: default
   syncPolicy:
     automated:
