--- a/overlays/development/app-prerequisites/micro-service-1/kustomization.yaml
+++ b/overlays/development/app-prerequisites/micro-service-1/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-bases:
-    - ../app-prerequisites
+namespace: micro-service-1
 resources:
    - namespace.yaml
-patchesStrategicMerge:
-   - registry-secrets.yaml
+   - ../registry-secrets.yaml
