--- a/overlays/development/app-prerequisites/micro-service-1/kustomization.yaml
+++ b/overlays/development/app-prerequisites/micro-service-1/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: micro-service-1
+bases:
+   - ../app-prerequisites
 resources:
-   - ../registry-secrets.yaml
+   - namespace.yaml
